# atomik

./: Makefile.am  README.md  configure.ac
libatomik/: Makefile.am
libatomik/arch/i386/: cap.c
libatomik/include/system/: call.h  cap.h
libatomik/src/: cap.c
musl/: Makefile.am
musl/arch/i386/: atomik.h
musl/arch/i386/bits/: alltypes.h  alltypes.h~  types.h
musl/include/: alltypes.h  atomik-user.h
musl/src/atomik/: debug.c
musl/src/ctype/: __ctype_get_mb_cur_max.c
musl/src/errno/: __errno_location.c  strerror.c
musl/src/multibyte/: internal.h
musl/src/stdio/: __stdio_write.c  __towrite.c  putc.c  puts.c  stdout.c  vfprintf.c
root/: Makefile.am  main.c
src/: Makefile.am  main.c  util.c
src/arch/i386/: Makefile.am  arch.c  boot-i386.S  boot.c  int-i386.S  int.c  irq.c  kernel.lds  seg-i386.S  seg.c  serial.c  syscall.c  timer.c
src/arch/i386/include/: i386-int.h  i386-io.h  i386-irq.h  i386-layout.h  i386-page.h  i386-regs.h  i386-seg.h  i386-serial.h  i386-tcb.h  i386-timer.h  i386-vga.h  machinedefs.h  multiboot.h
src/cap/: Makefile.am  cap.c  init.c  pool.c  ut.c
src/cap/include/: cap_init.h
src/include/: arch.h  util.h
src/include/atomik/: atomik.h  cap.h  elf.h  tcb.h  test.h  vspace.h
src/tcb/: Makefile.am  elf.c  sched.c  tcb.c
src/test/: Makefile.am  test.c
src/test/include/: test.h
src/vspace/: Makefile.am  vremap.c  vspace.c
