AUTOMAKE_OPTIONS = subdir-objects

MUSL_ALLSOURCES = src/ctype/__ctype_get_mb_cur_max.c \
	src/ctype/alpha.h \
	src/ctype/punct.h \
	src/ctype/nonspacing.h \
	src/ctype/wide.h \
	src/ctype/isalnum.c \
	src/ctype/isalpha.c \
	src/ctype/isascii.c \
	src/ctype/isblank.c \
	src/ctype/iscntrl.c \
	src/ctype/isdigit.c \
	src/ctype/isgraph.c \
	src/ctype/islower.c \
	src/ctype/isprint.c \
	src/ctype/ispunct.c \
	src/ctype/isspace.c \
	src/ctype/isupper.c \
	src/ctype/iswalnum.c \
	src/ctype/iswalpha.c \
	src/ctype/iswblank.c \
	src/ctype/iswcntrl.c \
	src/ctype/iswctype.c \
	src/ctype/iswdigit.c \
	src/ctype/iswgraph.c \
	src/ctype/iswlower.c \
	src/ctype/iswprint.c \
	src/ctype/iswpunct.c \
	src/ctype/iswspace.c \
	src/ctype/iswupper.c \
	src/ctype/iswxdigit.c \
	src/ctype/isxdigit.c \
	src/ctype/toascii.c \
	src/ctype/tolower.c \
	src/ctype/toupper.c \
	src/ctype/towctrans.c \
	src/ctype/wcswidth.c \
	src/ctype/wctrans.c \
	src/ctype/wcwidth.c \
	src/errno/__errno_location.c \
	src/errno/strerror.c  \
	src/errno/__strerror.h \
	src/internal/stdio_impl.h \
	src/internal/intscan.c \
	src/internal/intscan.h \
	src/internal/floatscan.c \
	src/internal/floatscan.h \
	src/internal/libc.h \
	src/internal/libm.h \
	src/internal/shgetc.c \
	src/internal/shgetc.h \
	src/math/__fpclassifyl.c \
	src/math/__signbitl.c \
	src/math/frexpl.c \
	src/multibyte/btowc.c \
	src/multibyte/c16rtomb.c \
	src/multibyte/c32rtomb.c \
	src/multibyte/internal.c \
	src/multibyte/internal.h \
	src/multibyte/mblen.c \
	src/multibyte/mbrlen.c \
	src/multibyte/mbrtoc16.c \
	src/multibyte/mbrtoc32.c \
	src/multibyte/mbrtowc.c \
	src/multibyte/mbsinit.c \
	src/multibyte/mbsnrtowcs.c \
	src/multibyte/mbsrtowcs.c \
	src/multibyte/mbstowcs.c \
	src/multibyte/mbtowc.c \
	src/multibyte/wcrtomb.c \
	src/multibyte/wcsnrtombs.c \
	src/multibyte/wcsrtombs.c \
	src/multibyte/wcstombs.c \
	src/multibyte/wctob.c \
	src/multibyte/wctomb.c \
	src/prng/drand48.c \
	src/prng/lcong48.c \
	src/prng/lrand48.c \
	src/prng/mrand48.c \
	src/prng/__rand48_step.c \
	src/prng/rand.c \
	src/prng/random.c \
	src/prng/rand_r.c \
	src/prng/__seed48.c \
	src/prng/seed48.c \
	src/prng/srand48.c \
	src/stdio/fprintf.c \
	src/stdio/fputc.c \
	src/stdio/fputs.c \
	src/stdio/__overflow.c \
	src/stdio/printf.c \
	src/stdio/putc.c \
	src/stdio/putchar.c \
	src/stdio/puts.c \
	src/stdio/snprintf.c \
	src/stdio/sprintf.c \
	src/stdio/stderr.c \
	src/stdio/__stdio_write.c \
	src/stdio/stdout.c \
	src/stdio/__towrite.c \
	src/stdio/__uflow.c \
	src/stdio/vfprintf.c \
	src/stdio/vprintf.c \
	src/stdio/vsnprintf.c \
	src/stdio/vsprintf.c \
	src/stdlib/abs.c \
	src/stdlib/atof.c \
	src/stdlib/atoi.c \
	src/stdlib/atol.c \
	src/stdlib/atoll.c \
	src/stdlib/bsearch.c \
	src/stdlib/div.c \
	src/stdlib/ecvt.c \
	src/stdlib/fcvt.c \
	src/stdlib/gcvt.c \
	src/stdlib/imaxabs.c \
	src/stdlib/imaxdiv.c \
	src/stdlib/labs.c \
	src/stdlib/ldiv.c \
	src/stdlib/llabs.c \
	src/stdlib/lldiv.c \
	src/stdlib/qsort.c \
	src/stdlib/strtod.c \
	src/stdlib/strtol.c \
	src/stdlib/wcstod.c \
	src/stdlib/wcstol.c \
	src/string/bcmp.c \
	src/string/bcopy.c \
	src/string/bzero.c \
	src/string/index.c \
	src/string/memccpy.c \
	src/string/memchr.c \
	src/string/memcmp.c \
	src/string/memcpy.c \
	src/string/memmem.c \
	src/string/memmove.c \
	src/string/mempcpy.c \
	src/string/memrchr.c \
	src/string/memset.c \
	src/string/rindex.c \
	src/string/stpcpy.c \
	src/string/stpncpy.c \
	src/string/strcasecmp.c \
	src/string/strcasestr.c \
	src/string/strcat.c \
	src/string/strchr.c \
	src/string/strchrnul.c \
	src/string/strcmp.c \
	src/string/strcpy.c \
	src/string/strcspn.c \
	src/string/strdup.c \
	src/string/strerror_r.c \
	src/string/strlcat.c \
	src/string/strlcpy.c \
	src/string/strlen.c \
	src/string/strncasecmp.c \
	src/string/strncat.c \
	src/string/strncmp.c \
	src/string/strncpy.c \
	src/string/strndup.c \
	src/string/strnlen.c \
	src/string/strpbrk.c \
	src/string/strrchr.c \
	src/string/strsep.c \
	src/string/strspn.c \
	src/string/strstr.c \
	src/string/strtok.c \
	src/string/strtok_r.c \
	src/string/strverscmp.c \
	src/string/swab.c \
	src/string/wcpcpy.c \
	src/string/wcpncpy.c \
	src/string/wcscasecmp.c \
	src/string/wcscasecmp_l.c \
	src/string/wcscat.c \
	src/string/wcschr.c \
	src/string/wcscmp.c \atomik
	src/string/wcscpy.c \
	src/string/wcscspn.c \
	src/string/wcsdup.c \
	src/string/wcslen.c \
	src/string/wcsncasecmp.c \
	src/string/wcsncasecmp_l.c \
	src/string/wcsncat.c \
	src/string/wcsncmp.c \
	src/string/wcsncpy.c \
	src/string/wcsnlen.c \
	src/string/wcspbrk.c \
	src/string/wcsrchr.c \
	src/string/wcsspn.c \
	src/string/wcsstr.c \
	src/string/wcstok.c \
	src/string/wcswcs.c \
	src/string/wmemchr.c \
	src/string/wmemcmp.c \
	src/string/wmemcpy.c \
	src/string/wmemmove.c \
	src/string/wmemset.c \
	arch/microblaze/pthread_arch.h \
	arch/microblaze/atomic.h \
	arch/microblaze/reloc.h \
	arch/microblaze/syscall_arch.h \
	arch/microblaze/bits/ioctl.h \
	arch/microblaze/bits/endian.h \
	arch/microblaze/bits/signal.h \
	arch/microblaze/bits/alltypes.h.in \
	arch/microblaze/bits/sem.h \
	arch/microblaze/bits/user.h \
	arch/microblaze/bits/stat.h \
	arch/microblaze/bits/io.h \
	arch/microblaze/bits/stdint.h \
	arch/microblaze/bits/limits.h \
	arch/microblaze/bits/errno.h \
	arch/microblaze/bits/posix.h \
	arch/microblaze/bits/float.h \
	arch/microblaze/bits/ipc.h \
	arch/microblaze/bits/reg.h \
	arch/microblaze/bits/statfs.h \
	arch/microblaze/bits/msg.h \
	arch/microblaze/bits/stdarg.h \
	arch/microblaze/bits/shm.h \
	arch/microblaze/bits/syscall.h \
	arch/microblaze/bits/poll.h \
	arch/microblaze/bits/socket.h \
	arch/microblaze/bits/fcntl.h \
	arch/microblaze/bits/resource.h \
	arch/microblaze/bits/setjmp.h \
	arch/microblaze/bits/termios.h \
	arch/microblaze/bits/fenv.h \
	arch/microblaze/bits/mman.h \
	arch/microblaze/crt_arch.h \
	arch/powerpc/pthread_arch.h \
	arch/powerpc/atomic.h \
	arch/powerpc/reloc.h \
	arch/powerpc/syscall_arch.h \
	arch/powerpc/bits/ioctl.h \
	arch/powerpc/bits/endian.h \
	arch/powerpc/bits/signal.h \
	arch/powerpc/bits/alltypes.h.in \
	arch/powerpc/bits/sem.h \
	arch/powerpc/bits/user.h \
	arch/powerpc/bits/stat.h \
	arch/powerpc/bits/io.h \
	arch/powerpc/bits/stdint.h \
	arch/powerpc/bits/limits.h \
	arch/powerpc/bits/errno.h \
	arch/powerpc/bits/posix.h \
	arch/powerpc/bits/float.h \
	arch/powerpc/bits/ipc.h \
	arch/powerpc/bits/reg.h \
	arch/powerpc/bits/statfs.h \
	arch/powerpc/bits/msg.h \
	arch/powerpc/bits/stdarg.h \
	arch/powerpc/bits/shm.h \
	arch/powerpc/bits/syscall.h \
	arch/powerpc/bits/poll.h \
	arch/powerpc/bits/socket.h \
	arch/powerpc/bits/fcntl.h \
	arch/powerpc/bits/resource.h \
	arch/powerpc/bits/setjmp.h \
	arch/powerpc/bits/termios.h \
	arch/powerpc/bits/fenv.h \
	arch/powerpc/bits/mman.h \
	arch/powerpc/crt_arch.h \
	arch/mips/pthread_arch.h \
	arch/mips/ksigaction.h \
	arch/mips/atomic.h \
	arch/mips/reloc.h \
	arch/mips/syscall_arch.h \
	arch/mips/bits/ioctl.h \
	arch/mips/bits/endian.h \
	arch/mips/bits/signal.h \
	arch/mips/bits/alltypes.h.in \
	arch/mips/bits/sem.h \
	arch/mips/bits/user.h \
	arch/mips/bits/stat.h \
	arch/mips/bits/io.h \
	arch/mips/bits/stdint.h \
	arch/mips/bits/limits.h \
	arch/mips/bits/errno.h \
	arch/mips/bits/posix.h \
	arch/mips/bits/float.h \
	arch/mips/bits/ipc.h \
	arch/mips/bits/reg.h \
	arch/mips/bits/statfs.h \
	arch/mips/bits/msg.h \
	arch/mips/bits/stdarg.h \
	arch/mips/bits/shm.h \
	arch/mips/bits/syscall.h \
	arch/mips/bits/poll.h \
	arch/mips/bits/socket.h \
	arch/mips/bits/fcntl.h \
	arch/mips/bits/resource.h \
	arch/mips/bits/setjmp.h \
	arch/mips/bits/termios.h \
	arch/mips/bits/fenv.h \
	arch/mips/bits/mman.h \
	arch/mips/crt_arch.h \
	arch/x86_64/pthread_arch.h \
	arch/x86_64/atomic.h \
	arch/x86_64/reloc.h \
	arch/x86_64/syscall_arch.h \
	arch/x86_64/bits/ioctl.h \
	arch/x86_64/bits/endian.h \
	arch/x86_64/bits/signal.h \
	arch/x86_64/bits/alltypes.h.in \
	arch/x86_64/bits/sem.h \
	arch/x86_64/bits/user.h \
	arch/x86_64/bits/stat.h \
	arch/x86_64/bits/io.h \
	arch/x86_64/bits/stdint.h \
	arch/x86_64/bits/alltypes.h \
	arch/x86_64/bits/limits.h \
	arch/x86_64/bits/errno.h \
	arch/x86_64/bits/posix.h \
	arch/x86_64/bits/float.h \
	arch/x86_64/bits/ipc.h \
	arch/x86_64/bits/reg.h \
	arch/x86_64/bits/statfs.h \
	arch/x86_64/bits/msg.h \
	arch/x86_64/bits/stdarg.h \
	arch/x86_64/bits/shm.h \
	arch/x86_64/bits/syscall.h \
	arch/x86_64/bits/poll.h \
	arch/x86_64/bits/socket.h \
	arch/x86_64/bits/fcntl.h \
	arch/x86_64/bits/resource.h \
	arch/x86_64/bits/setjmp.h \
	arch/x86_64/bits/termios.h \
	arch/x86_64/bits/fenv.h \
	arch/x86_64/bits/mman.h \
	arch/x86_64/crt_arch.h \
	arch/aarch64/pthread_arch.h \
	arch/aarch64/atomic.h \
	arch/aarch64/reloc.h \
	arch/aarch64/syscall_arch.h \
	arch/aarch64/bits/ioctl.h \
	arch/aarch64/bits/endian.h \
	arch/aarch64/bits/signal.h \
	arch/aarch64/bits/alltypes.h.in \
	arch/aarch64/bits/sem.h \
	arch/aarch64/bits/user.h \
	arch/aarch64/bits/stat.h \
	arch/aarch64/bits/io.h \
	arch/aarch64/bits/stdint.h \
	arch/aarch64/bits/limits.h \
	arch/aarch64/bits/errno.h \
	arch/aarch64/bits/posix.h \
	arch/aarch64/bits/float.h \
	arch/aarch64/bits/ipc.h \
	arch/aarch64/bits/reg.h \
	arch/aarch64/bits/statfs.h \
	arch/aarch64/bits/msg.h \
	arch/aarch64/bits/stdarg.h \
	arch/aarch64/bits/shm.h \
	arch/aarch64/bits/syscall.h \
	arch/aarch64/bits/poll.h \
	arch/aarch64/bits/socket.h \
	arch/aarch64/bits/fcntl.h \
	arch/aarch64/bits/resource.h \
	arch/aarch64/bits/setjmp.h \
	arch/aarch64/bits/termios.h \
	arch/aarch64/bits/fenv.h \
	arch/aarch64/bits/mman.h \
	arch/aarch64/crt_arch.h \
	arch/i386/pthread_arch.h \
	arch/i386/atomic.h \
	arch/i386/atomik.h \
	arch/i386/reloc.h \
	arch/i386/syscall_arch.h \
	arch/i386/bits/ioctl.h \
	arch/i386/bits/alltypes.h.in~ \
	arch/i386/bits/endian.h \
	arch/i386/bits/signal.h \
	arch/i386/bits/sem.h \
	arch/i386/bits/user.h \
	arch/i386/bits/stat.h \
	arch/i386/bits/io.h \
	arch/i386/bits/stdint.h \
	arch/i386/bits/alltypes.h \
	arch/i386/bits/types.h \
	arch/i386/bits/limits.h \
	arch/i386/bits/errno.h \
	arch/i386/bits/posix.h \
	arch/i386/bits/float.h \
	arch/i386/bits/ipc.h \
	arch/i386/bits/reg.h \
	arch/i386/bits/statfs.h \
	arch/i386/bits/msg.h \
	arch/i386/bits/stdarg.h \
	arch/i386/bits/shm.h \
	arch/i386/bits/syscall.h \
	arch/i386/bits/poll.h \
	arch/i386/bits/socket.h \
	arch/i386/bits/fcntl.h \
	arch/i386/bits/resource.h \
	arch/i386/bits/setjmp.h \
	arch/i386/bits/termios.h \
	arch/i386/bits/alltypes.h~ \
	arch/i386/bits/fenv.h \
	arch/i386/bits/mman.h \
	arch/i386/crt_arch.h \
	arch/or1k/pthread_arch.h \
	arch/or1k/atomic.h \
	arch/or1k/reloc.h \
	arch/or1k/syscall_arch.h \
	arch/or1k/bits/ioctl.h \
	arch/or1k/bits/endian.h \
	arch/or1k/bits/signal.h \
	arch/or1k/bits/alltypes.h.in \
	arch/or1k/bits/sem.h \
	arch/or1k/bits/user.h \
	arch/or1k/bits/stat.h \
	arch/or1k/bits/io.h \
	arch/or1k/bits/stdint.h \
	arch/or1k/bits/limits.h \
	arch/or1k/bits/errno.h \
	arch/or1k/bits/posix.h \
	arch/or1k/bits/float.h \
	arch/or1k/bits/ipc.h \
	arch/or1k/bits/reg.h \
	arch/or1k/bits/statfs.h \
	arch/or1k/bits/msg.h \
	arch/or1k/bits/stdarg.h \
	arch/or1k/bits/shm.h \
	arch/or1k/bits/syscall.h \
	arch/or1k/bits/poll.h \
	arch/or1k/bits/socket.h \
	arch/or1k/bits/fcntl.h \
	arch/or1k/bits/resource.h \
	arch/or1k/bits/setjmp.h \
	arch/or1k/bits/termios.h \
	arch/or1k/bits/fenv.h \
	arch/or1k/bits/mman.h \
	arch/or1k/crt_arch.h \
	arch/sh/pthread_arch.h \
	arch/sh/atomic.h \
	arch/sh/src/sh_atomic.h \
	arch/sh/reloc.h \
	arch/sh/syscall_arch.h \
	arch/sh/bits/ioctl.h \
	arch/sh/bits/endian.h \
	arch/sh/bits/signal.h \
	arch/sh/bits/alltypes.h.in \
	arch/sh/bits/sem.h \
	arch/sh/bits/user.h \
	arch/sh/bits/stat.h \
	arch/sh/bits/io.h \
	arch/sh/bits/stdint.h \
	arch/sh/bits/limits.h \
	arch/sh/bits/errno.h \
	arch/sh/bits/posix.h \
	arch/sh/bits/float.h \
	arch/sh/bits/ipc.h \
	arch/sh/bits/statfs.h \
	arch/sh/bits/msg.h \
	arch/sh/bits/stdarg.h \
	arch/sh/bits/shm.h \
	arch/sh/bits/syscall.h \
	arch/sh/bits/poll.h \
	arch/sh/bits/socket.h \
	arch/sh/bits/fcntl.h \
	arch/sh/bits/resource.h \
	arch/sh/bits/setjmp.h \
	arch/sh/bits/termios.h \
	arch/sh/bits/fenv.h \
	arch/sh/bits/mman.h \
	arch/sh/crt_arch.h \
	arch/x32/pthread_arch.h \
	arch/x32/atomic.h \
	arch/x32/reloc.h \
	arch/x32/syscall_arch.h \
	arch/x32/bits/ioctl.h \
	arch/x32/bits/endian.h \
	arch/x32/bits/signal.h \
	arch/x32/bits/alltypes.h.in \
	arch/x32/bits/sem.h \
	arch/x32/bits/user.h \
	arch/x32/bits/stat.h \
	arch/x32/bits/io.h \
	arch/x32/bits/stdint.h \
	arch/x32/bits/limits.h \
	arch/x32/bits/errno.h \
	arch/x32/bits/posix.h \
	arch/x32/bits/float.h \
	arch/x32/bits/ipc.h \
	arch/x32/bits/reg.h \
	arch/x32/bits/statfs.h \
	arch/x32/bits/msg.h \
	arch/x32/bits/stdarg.h \
	arch/x32/bits/shm.h \
	arch/x32/bits/syscall.h \
	arch/x32/bits/poll.h \
	arch/x32/bits/socket.h \
	arch/x32/bits/fcntl.h \
	arch/x32/bits/resource.h \
	arch/x32/bits/setjmp.h \
	arch/x32/bits/termios.h \
	arch/x32/bits/fenv.h \
	arch/x32/bits/mman.h \
	arch/x32/crt_arch.h \
	arch/arm/pthread_arch.h \
	arch/arm/atomic.h \
	arch/arm/reloc.h \
	arch/arm/syscall_arch.h \
	arch/arm/bits/ioctl.h \
	arch/arm/bits/endian.h \
	arch/arm/bits/signal.h \
	arch/arm/bits/alltypes.h.in \
	arch/arm/bits/sem.h \
	arch/arm/bits/user.h \
	arch/arm/bits/stat.h \
	arch/arm/bits/io.h \
	arch/arm/bits/stdint.h \
	arch/arm/bits/limits.h \
	arch/arm/bits/errno.h \
	arch/arm/bits/posix.h \
	arch/arm/bits/float.h \
	arch/arm/bits/ipc.h \
	arch/arm/bits/reg.h \
	arch/arm/bits/statfs.h \
	arch/arm/bits/msg.h \
	arch/arm/bits/stdarg.h \
	arch/arm/bits/shm.h \
	arch/arm/bits/syscall.h \
	arch/arm/bits/poll.h \
	arch/arm/bits/socket.h \
	arch/arm/bits/fcntl.h \
	arch/arm/bits/resource.h \
	arch/arm/bits/setjmp.h \
	arch/arm/bits/termios.h \
	arch/arm/bits/fenv.h \
	arch/arm/bits/mman.h \
	arch/arm/crt_arch.h \
	include/alloca.h \
	include/alltypes.h \
	include/complex.h \
	include/ctype.h \
	include/endian.h \
	include/errno.h \
	include/features.h \
	include/float.h \
	include/inttypes.h \
	include/limits.h \
	include/math.h \
	include/memory.h \
	include/stdalign.h \
	include/stdarg.h \
	include/stdbool.h \
	include/stddef.h \
	include/stdint.h \
	include/stdio_ext.h \
	include/stdio.h \
	include/stdlib.h \
	include/stdnoreturn.h \
	include/string.h \
	include/strings.h \
	include/stropts.h \
	include/uchar.h \
	include/unistd.h \
	include/values.h \
	include/wchar.h \
	include/wctype.h

noinst_LIBRARIES = libmusl.a libmusluser.a

libmusl_a_CFLAGS =-std=c99 -nostdinc -nostdlib -fno-builtin -Isrc/internal -Iinclude -I../src/include -Werror=implicit-function-declaration -Werror=implicit-int -Werror=pointer-sign -Werror=pointer-arith -D_XOPEN_SOURCE=700 -ggdb -Iarch/@AM_ARCH@ @AM_CFLAGS@ -D__ATOMIK__

libmusl_a_SOURCES = $(MUSL_ALLSOURCES) \
	include/atomik-user.h 

libmusluser_a_CFLAGS =-std=c99 -nostdinc -nostdlib -fno-builtin -Isrc/internal -Iinclude -Werror=implicit-function-declaration -Werror=implicit-int -Werror=pointer-sign -Werror=pointer-arith -D_XOPEN_SOURCE=700 -ggdb -Iarch/@AM_ARCH@ @AM_CFLAGS@

libmusluser_a_SOURCES = $(MUSL_ALLSOURCES) \
	include/atomik-user.h \
	src/atomik/debug.c

